# JGL

./: .gitignore  CMakeLists.txt  README.md  fix_engine_h.py  fix_property_panel_cpp.py  fix_render_engine_h.py  fix_render_engine_h2.py  fix_render_engine_h3.py  fix_window_h.py  generate_api_docs.bat  patch_all_final.py  patch_all_final2.py  patch_all_final3.py  patch_all_final4.py  patch_all_final5.py  patch_comments.py  patch_render_engine_cpp_final7.py  patch_render_engine_cpp_final_culling4.py  patch_render_engine_h_final_culling6.py  patch_render_engine_h_shadows2.py
Assets/: Anim.xml  Fur.xml  PBR.xml
Assets/materials/: Bloom.xml  NightSky.xml
Assets/screen_effects/: Rain.xml  Snow.xml
Game/: README.md  run_script.bat  run_script.sh  run_three_cubes.bat  run_three_cubes.sh
Game/script/: init.py  three_cubes.py
JGL_Engine/: README_zh.md
JGL_Engine/docs/: README.md  architecture_summary.md  rendering_pipeline.md
JGL_Engine/shaders/: brdf.fs  cubemap.vs  deferred_gbuffer_fs.shader  deferred_lighting_fs.shader  equirectangular_to_cubemap.fs  irradiance_convolution.fs  pbr_fs.shader  post_process_vs.shader  prefilter.fs  screen_effect_rain_fs.shader  screen_effect_snow_fs.shader  shadow_depth_vs.shader
JGL_Engine/source/: application.cpp  application.h  main.cpp  pch.h
JGL_Engine/source/editor/: editor_overlay.cpp  editor_overlay.h
JGL_Engine/source/elems/: animator.h  camera.h  material.cpp  material.h  model.h
JGL_Engine/source/engine/: engine.cpp  engine.h  render_engine.cpp  render_engine.h  resource_manager.h  scene.cpp  scene.h
JGL_Engine/source/engine/core/: component.h  entity.h  subsystem.h  transform.h
JGL_Engine/source/python/: py_engine.cpp  py_object.cpp  py_scene.cpp  python_bindings.cpp  python_bindings.h
JGL_Engine/source/render/: opengl_buffer_manager.cpp  opengl_buffer_manager.h  opengl_context.cpp  renderdoc_capture.cpp  renderdoc_capture.h  ui_context.cpp
JGL_Engine/source/render/ibl/: ibl_pipeline.cpp  ibl_pipeline.h
JGL_Engine/source/render/post_process/: post_process_stack.cpp  post_process_stack.h
JGL_Engine/source/shader/: shader_util.cpp  shader_util.h
JGL_Engine/source/ui/: property_panel.cpp  property_panel.h  scene_view.cpp  scene_view.h
JGL_Engine/source/utils/: filesystem.cpp  texturessystem.cpp  texturessystem.h
JGL_Engine/source/window/: jgl_window.cpp  jgl_window.h  window_overlay.h
JGL_MeshLoader/resource/: Anim.mtl  Bloom.mtl  Common.mtl  Common.xml  Fur.mtl  NightSky.mtl  PBR.mtl  SKY.mtl
JGL_MeshLoader/shaders/: bloom_fs.shader  deferred_gbuffer_fs.shader  deferred_gbuffer_vs.shader  deferred_lighting_fs.shader  deferred_lighting_vs.shader  texture_fs.shader
JGL_MeshLoader/source/: application.cpp  application.h  pch.h
JGL_MeshLoader/source/elems/: camera.h  material.cpp  material.h  mian.cpp
JGL_MeshLoader/source/engine/: render_engine.cpp  render_engine.h  resource_manager.cpp
JGL_MeshLoader/source/render/: deferred_gbuffer.cpp  deferred_gbuffer.h  opengl_buffer_manager.cpp  render_base.h  ui_context.cpp
JGL_MeshLoader/source/shader/: shader_util.cpp  shader_util.h
JGL_MeshLoader/source/ui/: property_panel.cpp  property_panel.h  scene_view.cpp  scene_view.h
JGL_MeshLoader/source/utils/: filesystem.cpp  texturessystem.cpp  texturessystem.h
JGL_MeshLoader/source/window/: jgl_window.cpp  jgl_window.h
docs/: PBR_Implementation.md  README.md  index.md
docs/api/: cpp_runtime_api.md  index.md  python_api.md
docs/engine/: architecture_summary.md  rendering_pipeline.md
docs/sections/: Fur.md  JGLEditor.md  PBR材质.md  Python接口设计.md  SkyNight.md  Weather.md  bloom.md  延迟渲染管线设计.md  骨骼动画加载.md
sections/: Fur.md  JGLEditor.md  PBR材质.md  Python接口设计.md  README.md  SkyNight.md  Weather.md  bloom.md  延迟渲染管线设计.md  骨骼动画加载.md
src/: main.cpp
tools/: generate_api_docs.py
